// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the AddEventForm for the Add Event page correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="cleaner"
        >
          Name
        </label>
      </div>
      <select
        class="custom-select"
        id="cleaner"
        name="cleaner"
        onChange={[Function]}
        value="all"
      >
        <option
          key="all"
          value="all"
        >
          All
        </option>
        <option
          key="kylu"
          value="kylu"
        >
          Kylu
        </option>
        <option
          key="alex"
          value="alex"
        >
          Alex
        </option>
        <option
          key="till"
          value="till"
        >
          Till
        </option>
        <option
          key="chris"
          value="chris"
        >
          Chris
        </option>
      </select>
    </div>
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="place"
        >
          Place
        </label>
      </div>
      <select
        class="custom-select"
        id="place"
        name="place"
        onChange={[Function]}
        value="all"
      >
        <option
          key="All"
          value="all"
        >
          All
        </option>
        <option
          key="Küche"
          value="küche"
        >
          Küche
        </option>
        <option
          key="Bad"
          value="bad"
        >
          Bad
        </option>
        <option
          key="Flur"
          value="flur"
        >
          Flur
        </option>
      </select>
    </div>
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="date"
        >
          Date
        </label>
      </div>
      <withStyles(SingleDatePicker)
        anchorDirection="left"
        appendToBody={false}
        block={false}
        calendarInfoPosition="bottom"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disableScroll={false}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        horizontalMonthPadding={13}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepFocusOnInput={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        noBorder={false}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsSelected": [Function],
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month.",
            "jumpToPrevMonth": "Move backward to switch to the previous month.",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
            "moveFocusByOneMonth": "Switch months.",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
            "openThisPanel": "Open this panel.",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field.",
            "selectFocusedDate": "Select the date in focus.",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        regular={false}
        renderCalendarInfo={null}
        renderDayContents={null}
        renderMonthElement={null}
        renderMonthText={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        small={false}
        verticalHeight={null}
        verticalSpacing={22}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div
      class="form-group"
    >
      <textarea
        class="form-control"
        name="note"
        onChange={[Function]}
        placeholder="Add your note"
        value=""
      />
    </div>
    <div
      class="form-group text-right"
    >
      <Link
        class="text-danger mr-2"
        replace={false}
        to="/"
      >
        Cancel
      </Link>
      <button
        class="btn btn-primary"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`should render the AddEventForm for the Edit Event page correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="cleaner"
        >
          Name
        </label>
      </div>
      <select
        class="custom-select"
        id="cleaner"
        name="cleaner"
        onChange={[Function]}
        value="kylu"
      >
        <option
          key="all"
          value="all"
        >
          All
        </option>
        <option
          key="kylu"
          value="kylu"
        >
          Kylu
        </option>
        <option
          key="alex"
          value="alex"
        >
          Alex
        </option>
        <option
          key="till"
          value="till"
        >
          Till
        </option>
        <option
          key="chris"
          value="chris"
        >
          Chris
        </option>
      </select>
    </div>
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="place"
        >
          Place
        </label>
      </div>
      <select
        class="custom-select"
        id="place"
        name="place"
        onChange={[Function]}
        value="bad"
      >
        <option
          key="All"
          value="all"
        >
          All
        </option>
        <option
          key="Küche"
          value="küche"
        >
          Küche
        </option>
        <option
          key="Bad"
          value="bad"
        >
          Bad
        </option>
        <option
          key="Flur"
          value="flur"
        >
          Flur
        </option>
      </select>
    </div>
    <div
      class="input-group mb-2"
    >
      <div
        class="input-group-prepend"
      >
        <label
          class="input-group-text"
          for="date"
        >
          Date
        </label>
      </div>
      <withStyles(SingleDatePicker)
        anchorDirection="left"
        appendToBody={false}
        block={false}
        calendarInfoPosition="bottom"
        customCloseIcon={null}
        customInputIcon={null}
        date={"1970-01-01T00:00:00.000Z"}
        daySize={39}
        disableScroll={false}
        disabled={false}
        displayFormat={[Function]}
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        horizontalMonthPadding={13}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepFocusOnInput={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        noBorder={false}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsSelected": [Function],
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month.",
            "jumpToPrevMonth": "Move backward to switch to the previous month.",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
            "moveFocusByOneMonth": "Switch months.",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
            "openThisPanel": "Open this panel.",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field.",
            "selectFocusedDate": "Select the date in focus.",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        regular={false}
        renderCalendarInfo={null}
        renderDayContents={null}
        renderMonthElement={null}
        renderMonthText={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        small={false}
        verticalHeight={null}
        verticalSpacing={22}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div
      class="form-group"
    >
      <textarea
        class="form-control"
        name="note"
        onChange={[Function]}
        placeholder="Add your note"
        value="Alles sauber gemacht"
      />
    </div>
    <div
      class="form-group text-right"
    >
      <Link
        class="text-danger mr-2"
        replace={false}
        to="/"
      >
        Cancel
      </Link>
      <button
        class="btn btn-primary"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
